Updated teamHTML after entering information from terminal

--- a/Output/team.html
+++ b/Output/team.html
@@ -12,4 +12,34 @@
             <span class="navbar-brand mb-0 h1 w-100 text-center">Team Profile</span>
         </nav>
         <div class="container">
-            <div class="row">
+            <div class="row"><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">Pinkal<br /><br />Engineer</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 1</li>
+                <li class="list-group-item">Email Address: pinkalpatel@gmail.com</li>
+                <li class="list-group-item">GitHub: pinkal_patel</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">pritesh<br /><br />Intern</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 2</li>
+                <li class="list-group-item">Email Address: pritesh123@gmail.com</li>
+                <li class="list-group-item">School: UIC</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">veli<br /><br />Manager</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 3</li>
+                <li class="list-group-item">Email Address: veli_shah</li>
+                <li class="list-group-item">Office Phone: 6304321234</li>
+            </ul>
+            </div>
+        </div> </div>
+    </div>
+    </body>
+    </html>
